@@ -4,6 +4,8 @@
 =======================================================
 
 
+27 Feb 2007      Parallelization of conductor implemented, divide_et_impera.f90 added. (AF)
+
 26 Feb 2007      Long standing bug in the midpoint.f90 algorithm fixed. (AF)
 
 20 Feb 2007      Normalization of WFs from plot.f90 further tested. nr1, nr2, nr3 vars
